<resources>
    <string name="app_name">ADonation</string>
    <string name="user_name">Name</string>
    <string name="user_birthday">Birthday</string>
    <string name="user_gender">Gender</string>
    <string name="user_submit">Submit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="bloodtype">Blood Type</string>
    <string name="newdonor_auth">Enter Authentication Detailes</string>

    <string name="newdonor_createnew">Create a New Donor</string>
    <string name="registration_title">Register Here</string>

    <string name="text_greeting">Hello %s,</string>
    <string name="text_greeting2">how are you today?</string>
    <string name="text_greeting1"> %s Profile</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_a_donor_account_register_here">Don\'t have a donor account? Register here</string>
    <string name="blood_donors_app">Blood Donors App</string>
    <string name="feed">feed</string>
    <string name="what_is_on_your_mind">what is on your mind</string>
    <string name="post">post</string>
    <string name="donation_location">donation_location</string>
    <string name="liters">liters</string>
    <string name="donation_date">donation_date</string>
    <string name="donation_type">donation_type</string>
    <string name="donation_new">donation_new</string>
    <string name="donation_history">Donation History</string>

    <string name="your_favorite_donation_locations">Your favorite donation locations</string>
    <string name="donated_this_year">donated_this_year</string>
    <string name="ml">ml</string>
    <string name="last_donation">Last Donation</string>
    <string name="schedule_nothingyet">schedule_nothingyet</string>
    <string name="add_donation">Add Donation</string>
    <string name="schedule_buttonremove">schedule_buttonremove</string>
    <string name="user" translatable="false">user :</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="please_enter_the_email_you_use_to_sign_in">Please enter the email you use to sign in</string>
    <string name="reset_password">Reset Password</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>

    </string-array>
    <string-array name="type">
        <item>Blood</item>
        <item>Plasma</item>
        <item>Platelets</item>
    </string-array>


    <string-array name="locations">
        <item>NORTH</item>
        <item>Kiryat Shmona</item>
        <item>Nahariya</item>
        <item>Haifa</item>
        <item>CENTER</item>
        <item>Tel Aviv</item>
        <item>Holon</item>
        <item>Petah Tikva</item>
        <item>SHEPHELAH</item>
        <item>Lod</item>
        <item>Rishon LeZion</item>
        <item>Rehovot</item>
        <item>SOUTH</item>
        <item>Eilat</item>
        <item>Beer Sheva</item>

    </string-array>





</resources>