<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">


    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/authLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newdonor_auth"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textEmailField"
                            android:inputType="textPersonName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textPasswordField"
                            android:inputType="textPersonName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:animateLayoutChanges="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/authLayout"
                    android:padding="16dp">
                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/newdonor_createnew"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />

                    <!-- Gender -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconDrawable="@drawable/ic_baseline_person_24"
                        android:hint="@string/user_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textPersonName"
                            android:inputType="textPersonName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Donation Date -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_birthday"
                        app:startIconDrawable="@drawable/calendar_star"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <AutoCompleteTextView
                            android:id="@+id/textBirthdate"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <!-- Donation Type -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:startIconDrawable="@drawable/gender_male_female"
                        android:hint="@string/user_gender"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                        <AutoCompleteTextView
                            android:id="@+id/autoCompleteGender"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="none"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:startIconDrawable="@drawable/water"
                        android:hint="@string/bloodtype"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/textBloodType"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginRight="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/loginText"
                        style="?attr/materialButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black"
                        android:paddingLeft="32dp"
                        android:paddingRight="32dp"
                        android:textSize="10sp" />


                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/registerBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingLeft="32dp"
                        android:paddingRight="32dp"
                        android:text="@string/user_submit" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>