<?xml version="1.0" encoding="utf-8"?>
<!--    <data>-->
<!--        <variable-->
<!--            name="viewmodel"-->
<!--            type="com.example.adonation.SummaryViewModel" />-->
<!--    </data>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".FragmentSummary">

        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    tools:text="@string/text_greeting"
                    android:autoSizeTextType="uniform"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/text_greeting2"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="12dp"
                    android:autoSizeTextType="uniform"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:autoSizeTextType="uniform"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginBottom="8dp"/>

                <!-- Summary -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/base_margin"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/colorPrimaryDark">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="24dp">
                            <!-- Title, secondary and supporting text -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="summary"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                />
                            <HorizontalScrollView
                                android:scrollbars="none"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            </HorizontalScrollView>

                            <!-- Donated This year-->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/donated_this_year"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="2dp"
                                    android:layout_marginLeft="24dp"
                                    tools:text="450"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                    android:textColor="@color/colorPrimary"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="2dp"
                                    android:text="@string/ml"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                    android:textColor="?android:attr/textColorSecondary"/>
                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <!-- Donation Scheduler -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/base_margin"
                    android:layout_marginHorizontal="@dimen/base_margin"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/colorPrimaryDark">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:animateLayoutChanges="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="24dp">
                            <!-- Title, secondary and supporting text -->
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/last_donation"
                                android:textAppearance="?attr/textAppearanceHeadline6"
                                />
                            <!-- nothing text -->
                            <TextView
                                android:visibility="visible"
                                tools:visibility="gone"
                                android:id="@+id/textScheduleNone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/schedule_nothingyet"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                />
                            <!-- Schedule details -->
                            <LinearLayout
                                android:id="@+id/layoutScheduleDetails"
                                android:visibility="gone"
                                tools:visibility="visible"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">
                                <!-- Donation Type -->
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="12dp"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                    android:textColor="@color/colorPrimary"
                                    tools:text="Whole Blood" />
                                <!-- Days To -->
                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:paddingTop="0dp"
                                        android:layout_marginLeft="4dp"
                                        tools:text="11"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                        android:textColor="@color/colorPrimary"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="2dp"
                                        android:layout_marginLeft="4dp"
                                        tools:text="days ago"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                        android:textColor="?android:attr/textColorSecondary"/>
                                </LinearLayout>
                                <!-- Date -->
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="16dp"
                                    tools:text="@tools:sample/date/ddmmyy"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    android:textColor="?android:attr/textColorSecondary"/>
                                <!-- Location -->
                                <LinearLayout
                                    android:id="@+id/viewScheduleLocation"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="12dp">

                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/viewScheduleNote"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical"
                                    android:layout_marginTop="12dp">

                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <!-- Buttons -->
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="horizontal">
                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/btnScheduleDonation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:text="@string/add_donation"
                                style="?attr/borderlessButtonStyle"/>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>




                </LinearLayout>
            </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
